Can now run application - start reversing
Signed-off-by: Open592 Developer <uss@open592.com>